Added validation color

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,6 +21,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
 }
 
 #sinField, #verify {
@@ -30,7 +31,8 @@ body {
 
 #sinField {
     width: 250px;
-    height: 38px;
+    height: 34px;
+    padding: 4px;
 }
 
 #verify {
@@ -45,4 +47,14 @@ body {
 #verify:hover {
     background-color: blueviolet;
     color: white;
+}
+
+.errorBorder {
+    outline: 2px solid red !important;
+    transition: all .15s ease;
+}
+
+.successBorder {
+    outline: 2px solid #00ff00 !important;
+    transition: all .15s ease;
 }
