--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,13 +14,29 @@
 body {
     background-color: #0e0e0e;
     color: white;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.wrapper {
+    width: 600px;
+    padding: 3%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #0a0a0a;
 }
 
 .fieldWrapper {
-    width: 40%;
+    width: 100%;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 }
 
@@ -31,7 +47,7 @@ body {
 
 #sinField {
     width: 250px;
-    height: 34px;
+    height: 32px;
     padding: 4px;
 }
 
