--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,12 +65,27 @@ body {
     color: white;
 }
 
-.errorBorder {
-    outline: 2px solid red !important;
-    transition: all .15s ease;
-}
-
 .successBorder {
     outline: 2px solid #00ff00 !important;
     transition: all .15s ease;
+}
+
+.errorBorder {
+    outline: 2px solid red !important;
+    transition: all .15s ease;
+    animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% { transform: translateX(1px) rotate(0deg); }
+    10% { transform: translateX(-1px) rotate(-1deg); }
+    20% { transform: translateX(-2px) rotate(1deg); }
+    30% { transform: translateX(2px) rotate(0deg); }
+    40% { transform: translateX(1px) rotate(1deg); }
+    50% { transform: translateX(-1px) rotate(-1deg); }
+    60% { transform: translateX(-2px) rotate(0deg); }
+    70% { transform: translateX(2px) rotate(-1deg); }
+    80% { transform: translateX(-1px) rotate(1deg); }
+    90% { transform: translateX(1px) rotate(0deg); }
+    100% { transform: translateX(1px) rotate(-1deg); }
 }
